feat(server): get log metadata from database
